--- a/content/themes/casper/post.hbs
+++ b/content/themes/casper/post.hbs
@@ -1,6 +1,6 @@
 {{!
-< default}} {{!-- The tag above means: insert everything in this file into the {body} of the default.hbs template --}}
-    <header class="site-header outer">
+< default}} {{!-- The tag above means: insert everything in this file into the {body} of the default.hbs template --}} <header
+    class="site-header outer">
     <div class="inner">
         {{> "site-nav"}}
     </div>
@@ -64,16 +64,18 @@
                 <section class="post-full-comments">
                     <div id="disqus_thread"></div>
                     <script>
-                        var disqus_config = function () {
-                            this.page.url = '{{url absolute="true"}}';
-                            this.page.identifier = 'ghost-{{comment_id}}';
-                        };
-                        (function () {
-                            var d = document, s = d.createElement('script');
-                            s.src = 'https://' + disqus_shortname + '.disqus.com/embed.js';
-                            s.setAttribute('data-timestamp', +new Date());
-                            (d.head || d.body).appendChild(s);
-                        })();
+                        if (disqus_shortname) {
+                            var disqus_config = function () {
+                                this.page.url = '{{url absolute="true"}}';
+                                this.page.identifier = 'ghost-{{comment_id}}';
+                            };
+                            (function () {
+                                var d = document, s = d.createElement('script');
+                                s.src = 'https://' + disqus_shortname + '.disqus.com/embed.js';
+                                s.setAttribute('data-timestamp', +new Date());
+                                (d.head || d.body).appendChild(s);
+                            })();
+                        }
                     </script>
                 </section>
 
@@ -118,66 +120,65 @@
     {{!-- The #contentFor helper here will send everything inside it up to the matching #block helper found in default.hbs
     --}} {{#contentFor "scripts"}}
     <script>
-                    // NOTE: Scroll performance is poor in Safari
-                    // - this appears to be due to the events firing much more slowly in Safari.
-                    //   Dropping the scroll event and using only a raf loop results in smoother
-                    //   scrolling but continuous processing even when not scrolling
-                    $(document).ready(function () {
-                        // Start fitVids
-                        var $postContent = $(".post-full-content");
-                        $postContent.fitVids();
-                        // End fitVids
+        // NOTE: Scroll performance is poor in Safari
+        // - this appears to be due to the events firing much more slowly in Safari.
+        //   Dropping the scroll event and using only a raf loop results in smoother
+        //   scrolling but continuous processing even when not scrolling
+        $(document).ready(function () {
+            // Start fitVids
+            var $postContent = $(".post-full-content");
+            $postContent.fitVids();
+            // End fitVids
 
-                        var progressBar = document.querySelector('progress');
-                        var header = document.querySelector('.floating-header');
-                        var title = document.querySelector('.post-full-title');
+            var progressBar = document.querySelector('progress');
+            var header = document.querySelector('.floating-header');
+            var title = document.querySelector('.post-full-title');
 
-                        var lastScrollY = window.scrollY;
-                        var lastWindowHeight = window.innerHeight;
-                        var lastDocumentHeight = $(document).height();
-                        var ticking = false;
+            var lastScrollY = window.scrollY;
+            var lastWindowHeight = window.innerHeight;
+            var lastDocumentHeight = $(document).height();
+            var ticking = false;
 
-                        function onScroll() {
-                            lastScrollY = window.scrollY;
-                            requestTick();
-                        }
+            function onScroll() {
+                lastScrollY = window.scrollY;
+                requestTick();
+            }
 
-                        function onResize() {
-                            lastWindowHeight = window.innerHeight;
-                            lastDocumentHeight = $(document).height();
-                            requestTick();
-                        }
+            function onResize() {
+                lastWindowHeight = window.innerHeight;
+                lastDocumentHeight = $(document).height();
+                requestTick();
+            }
 
-                        function requestTick() {
-                            if (!ticking) {
-                                requestAnimationFrame(update);
-                            }
-                            ticking = true;
-                        }
+            function requestTick() {
+                if (!ticking) {
+                    requestAnimationFrame(update);
+                }
+                ticking = true;
+            }
 
-                        function update() {
-                            var trigger = title.getBoundingClientRect().top + window.scrollY;
-                            var triggerOffset = title.offsetHeight + 35;
-                            var progressMax = lastDocumentHeight - lastWindowHeight;
+            function update() {
+                var trigger = title.getBoundingClientRect().top + window.scrollY;
+                var triggerOffset = title.offsetHeight + 35;
+                var progressMax = lastDocumentHeight - lastWindowHeight;
 
-                            // show/hide floating header
-                            if (lastScrollY >= trigger + triggerOffset) {
-                                header.classList.add('floating-active');
-                            } else {
-                                header.classList.remove('floating-active');
-                            }
+                // show/hide floating header
+                if (lastScrollY >= trigger + triggerOffset) {
+                    header.classList.add('floating-active');
+                } else {
+                    header.classList.remove('floating-active');
+                }
 
-                            progressBar.setAttribute('max', progressMax);
-                            progressBar.setAttribute('value', lastScrollY);
+                progressBar.setAttribute('max', progressMax);
+                progressBar.setAttribute('value', lastScrollY);
 
-                            ticking = false;
-                        }
+                ticking = false;
+            }
 
-                        window.addEventListener('scroll', onScroll, { passive: true });
-                        window.addEventListener('resize', onResize, false);
+            window.addEventListener('scroll', onScroll, { passive: true });
+            window.addEventListener('resize', onResize, false);
 
-                        update();
-                    });
-
+            update();
+        });
     </script>
     {{/contentFor}}
