--- a/content/themes/casper/post.hbs
+++ b/content/themes/casper/post.hbs
@@ -69,11 +69,11 @@ into the {body} of the default.hbs template --}}
                 {{/author}}
             </footer>
 
-            {{!--
+            
 
-            If you use Disqus comments, just uncomment this block.
+            {{!-- If you use Disqus comments, just uncomment this block.
             The only thing you need to change is "test-apkdzgmqhj" - which
-            should be replaced with your own Disqus site-id.
+            should be replaced with your own Disqus site-id. --}}
 
             <section class="post-full-comments">
                 <div id="disqus_thread"></div>
@@ -83,14 +83,16 @@ into the {body} of the default.hbs template --}}
                         this.page.identifier = 'ghost-{{comment_id}}';
                     };
                     (function() {
-                        var d = document, s = d.createElement('script');
-                        s.src = 'https://test-apkdzgmqhj.disqus.com/embed.js';
-                        s.setAttribute('data-timestamp', +new Date());
-                        (d.head || d.body).appendChild(s);
+                        if(disqus_shortname){
+                            var d = document, s = d.createElement('script');
+                            s.src = 'https://'+process.env.disqusShortname+'.disqus.com/embed.js';
+                            s.setAttribute('data-timestamp', +new Date());
+                            (d.head || d.body).appendChild(s);
+                        }
                     })();
                 </script>
             </section>
-            --}}
+           
             <section class="post-full-comments">
                 <div id="disqus_thread"></div>
             </section>
